--- a/views/geocode.erb
+++ b/views/geocode.erb
@@ -18,15 +18,15 @@
     <!-- Your own CSS -->
     <link rel="stylesheet" href="/styles.css">
 
-    <title>Geocoding</title>
+    <title>Magic Place</title>
   </head>
   <body>
 
     <div class="container mt-5">
-      <h1>Geocoding</h1>
+      <h1>Weather & News</h1>
       <form action="/news">
        <input type="text" name="q">
-       <button type="submit">Go there</submit>
+       <button type="submit">Tell me more</submit>
     </div>
 
     <!-- Optional JavaScript -->
