--- a/views/news.erb
+++ b/views/news.erb
@@ -23,18 +23,19 @@
   <body>
 
     <div class="container mt-5">
-      <h1>Weather</h1>
+      <h1>Local Weather</h1>
     </div>
     
     <div class="container mt-5">
     <p>In Chicago, it is currently <%= @current_temperature.round() %> and <%= @conditions %></p>
     <% for day in @forecast["daily"]["data"] %>
     <p>A high temperature of <%= day["temperatureHigh"].round() %> and <%= day["summary"] %></p>
+    <img src="https://darksky.net/images/weather-icons/<%= day["icon"] %>.png" class="img-fluid">
     <% end %>
     </div>
 
     <div class="container mt-5">
-      <h1>News</h1>
+      <h1>Daily Local News</h1>
     </div>
     
     <div class="container mt-5">
