--- a/views/geocode.erb
+++ b/views/geocode.erb
@@ -20,7 +20,8 @@
 
     <title>Magic Place</title>
   </head>
-  <body>
+ 
+  <body class="homepage">
 
     <div class="container mt-5">
       <h1>Weather & News</h1>
