--- a/public/styles.css
+++ b/public/styles.css
@@ -1,8 +1,11 @@
-img.fluid {
-width:30px;
-}
 h1 {
-    text-align:center;
-    font-size:40px;
+    text-align:left;
+    font-size:60px;
     color:black;
+}
+.newspage{
+    background-color: lightgrey;
+}
+.homepage{
+    background-color: lightgrey;
 }
