--- a/views/news.erb
+++ b/views/news.erb
@@ -24,7 +24,9 @@
   <body class="newspage">
   
     <div class="container mt-5">
+     <div class="jumbotron">
       <h1>Local Weather</h1>
+     </div>
     </div>
     
     <div class="container mt-5">
@@ -36,7 +38,9 @@
     </div>
 
     <div class="container mt-5">
+     <div class="jumbotron">
       <h1>Daily Local News</h1>
+     </div>
     </div>
     
     <div class="container mt-5">
