--- a/views/geocode.erb
+++ b/views/geocode.erb
@@ -23,12 +23,16 @@
  
   <body class="homepage">
 
-    <div class="container mt-5">
-      <h1>Weather & News</h1>
-      <form action="/news">
-       <input type="text" name="q">
-       <button type="submit">Tell me more</submit>
-    </div>
+<div class="container mt-5">
+ <div class="jumbotron">
+  <h1>Weather & News</h1>
+  <form action="/news">
+  <input type="text" name="q">
+  <button type="submit">Tell me more</submit>
+ </div>
+</div>    
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
