--- a/views/news.erb
+++ b/views/news.erb
@@ -39,7 +39,7 @@
 
     <div class="container mt-5">
      <div class="jumbotron">
-      <h1>Daily Local News</h1>
+      <h1>Daily News</h1>
      </div>
     </div>
     
